# brutus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  DOCSTRING_STYLE.md  LICENSE  MANIFEST.in  README.md  TESTING_COVERAGE_NOTES.md  coverage.xml  pyproject.toml  run_coverage.py  run_tests_with_coverage.sh  test_data_implementation.py  test_isochrones_implementation.py  test_math_implementation.py  test_neural_nets_implementation.py  test_offsets_implementation.py  test_photometry_implementation.py  test_refactored.py  test_sampling_implementation.py  test_sed_implementation.py  test_tracks_implementation.py
.github/workflows/: docs.yml  tests.yml
docs/: Makefile
docs/source/: choosing_options.rst  cluster_modeling.rst  conf.py  contributing.rst  faq.rst  grid_generation.rst  index.rst  installation.rst  photometric_offsets.rst  priors.rst  quickstart.rst  scientific_background.rst  stellar_models.rst  tutorials.rst  understanding_results.rst
docs/source/api/: analysis.rst  core.rst  data.rst  dust.rst  index.rst  plotting.rst  priors.rst  utils.rst
src/brutus/: __init__.py  seds.py  utilities.py
src/brutus/analysis/: __init__.py  individual.py  los_dust.py  offsets.py  populations.py
src/brutus/core/: __init__.py  grid_generation.py  individual.py  isochrones.py  neural_nets.py  populations.py  sed_utils.py  tracks.py
src/brutus/data/: __init__.py  download.py  filters.py  loader.py
src/brutus/dust/: __init__.py  extinction.py  maps.py
src/brutus/plotting/: __init__.py  binning.py  corner.py  distance.py  offsets.py  sed.py  utils.py
src/brutus/priors/: __init__.py  astrometric.py  extinction.py  galactic.py  stellar.py  utilities.py
src/brutus/utils/: __init__.py  math.py  photometry.py  sampling.py
tests/: conftest.py  test_coverage_check.py  test_init_coverage.py
tests/test_analysis/: test_analysis_init.py  test_bruteforce.py  test_los_dust.py  test_offsets_comprehensive.py  test_populations_basic.py
tests/test_core/: test_core_init.py  test_core_integration.py  test_grid_generation.py  test_import_structure.py  test_individual_comprehensive.py  test_populations_comprehensive.py  test_sed_comprehensive.py  test_slow_integration.py  test_stargrid.py  test_stargrid_bruteforce_integration.py
tests/test_data/: test_data_comprehensive.py  test_loader_comprehensive.py
tests/test_dust/: test_dust_comprehensive.py
tests/test_plotting/: test_binning.py  test_corner.py  test_distance.py  test_offsets.py  test_sed.py  test_utils.py
tests/test_priors/: __init__.py  test_galactic_coverage.py  test_priors_comprehensive.py
tests/test_utils/: test_math_comprehensive.py  test_photometry.py  test_photometry_comprehensive.py  test_sampling_comprehensive.py  test_utils_init.py
tutorials/: Orion_l204.7_b-19.2_bs.h5  Orion_l204.7_b-19.2_mist.h5
