[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-brutus"
version = "1.0.0"
description = "Brute-force Bayesian inference for photometric distances, reddenings, and stellar properties"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joshua S Speagle", email = "j.speagle@utoronto.ca"}
]
maintainers = [
    {name = "Joshua S Speagle", email = "j.speagle@utoronto.ca"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
]
keywords = [
    "brute force", "photometry", "bayesian", "stellar", "star",
    "cluster", "isochrone", "dust", "reddening",
    "parallax", "distance", "template fitting"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19",
    "scipy>=1.6.0", 
    "matplotlib>=3.3.0",
    "h5py>=3.0.0",
    "healpy>=1.14.0",
    "numba>=0.53.0",
    "pooch>=1.4.0",
]
# dynamic = ["version"]  # removed to avoid conflict with static 'version' field

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.1",
    "jupyter>=1.0",
    "nbsphinx>=0.8",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "numpy",
    "scipy", 
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/joshspeagle/brutus"
Repository = "https://github.com/joshspeagle/brutus"
Documentation = "https://github.com/joshspeagle/brutus"
"Bug Tracker" = "https://github.com/joshspeagle/brutus/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.dat", "*.txt", "*.md"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=brutus",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
# Note: Set NUMBA_DISABLE_JIT=1 environment variable for accurate coverage
# of @jit/@njit decorated functions. Without this, numba-compiled functions
# will show 0% coverage even if executed by tests.

[tool.coverage.run]
source = ["src/brutus"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    'if __name__ == "__main__":',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true